## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# POSTGRES_TIMEZONE
######################################################################

postgres_timezone_FILES =

postgres_timezone_INCLUDES = \
							 -I$(srcdir)/postgres/include \
							 -I$(srcdir)/postgres/backend
